--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-16.0.0.tar.gz",
     "react-native-maps": "^0.15.0",
     "react-navigation": "^1.0.0-beta.9"
+  },
+  "devDependencies": {
+    "semistandard": "^11.0.0"
   }
 }
