--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-navigation": "^1.0.0-beta.9"
   },
   "devDependencies": {
-    "semistandard": "^11.0.0"
+    "semistandard": "^11.0.0",
+    "standard-react-native": "^1.0.1"
   }
 }
